// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Orders Styles should render the main container with full container mixin applied 1`] = `
<div
  className="Ordersstyles__Main-hGDFWZ gFIELO"
/>
`;

exports[`Orders Styles should render the main container with full container mixin applied 2`] = `
<div
  className="Ordersstyles__Main-hGDFWZ gFIELO"
/>
`;

exports[`Orders Styles should render the main container with full container mixin applied 3`] = `
<div
  className="Ordersstyles__Main-hGDFWZ gFIELO"
/>
`;

exports[`Orders Styles should render the main container without full container mixin applied 1`] = `
<div
  className="Ordersstyles__Main-hGDFWZ dkThzL"
/>
`;

exports[`Orders Styles should render the order add button container with 10% from bottom 1`] = `
<div
  className="Ordersstyles__OrderAddButtonContainer-iLHBvL irptfV"
/>
`;

exports[`Orders Styles should render the order add button container with 20% from bottom 1`] = `
<div
  className="Ordersstyles__OrderAddButtonContainer-iLHBvL lajBHW"
/>
`;
